# Makefile.am for gEDA-AI admin documentation.
#
# Distributed under the GNU General Public License v2 or later
# Author: gEDA Maintainers
# Original Date: 2025-06-03
#
# This file is part of gEDA-AI, a suite of Electronic Design Automation tools.
# See the file COPYING for copying conditions.
# This file is maintained by the gEDA-AI project.

# Man page for the geda-update-databases.sh script.
man1_MANS = geda-update-databases.1

EXTRA_DIST = $(man1_MANS)

MOSTLYCLEANFILES = *~
CLEANFILES = *~
DISTCLEANFILES = *~ Makefile.in